resolve coisas